--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
         <li class="item item3"></li>
     </ul>
     <img src="star.svg" id="star" width="150">
+    <div class="words"></div>
+
 
 </body>
-<script src="regex.js"></script>
+<script src="soundrec.js"></script>
 
 </html>
